# SBMD

./: README.md  environment.yaml  pyproject.toml
src/lab/: experiments.ipynb  graphwalking.py
