[project]
name = "sbmd"
version = "0.1.0"
description = "Systematic Benchmark For Molecular Data"
authors = [
    {name = "Amir Masoud Nourollah",email = "nourollah.am@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "ase (>=3.24.0,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "rdkit (>=2024.9.5,<2025.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
